# charuco-calibration

./: .gitignore  CMakeLists.txt  README.md
include/: ArUco.h  CharucoCalibrator.h  Logger.h
script/: analysis.mlx
src/: ArUco.cpp  CharucoCalibrator.cpp  main.cpp
